<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#6E6E6E" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/text_home"
                android:textColor="@color/black_1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/text_read_book"
                android:textColor="@color/black_1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_learn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/text_learn_word"
                android:textColor="@color/black_1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_practise"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/text_practise_math"
                android:textColor="@color/black_1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/text_mine"
                android:textColor="@color/black_1"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>